tests/snapshots/cmd_add__cmd_add__add_branch_ref-diff.snap
---
source: tests/cmd_add.rs
expression: value
---
--- a/.github/ghat/ghat.lock
+++ b/.github/ghat/ghat.lock
@@ -0,0 +1 @@
+dtolnay/rust-toolchain branch:stable a3b77706cfa4c4bf431a39f7e267c878effdf858
