tests/snapshots/cmd_add__cmd_add__add_branch_ref-output.snap
---
source: tests/cmd_add.rs
expression: value
---
exit_code: 0
---stderr---
       Added dtolnay/rust-toolchain stable (a3b77706cfa4)
