tests/snapshots/cmd_add__cmd_add__add_multiple_actions-checkout_dts.snap
---
source: tests/cmd_add.rs
expression: value
---
// Do not edit: this file is generated by `ghat generate`.
declare global {
  /**
   * Check out a Git repository at a particular version.
   * @see https://github.com/actions/checkout
   */
  function uses(
    action: "actions/checkout",
    options?: UsesOptions<{
    /** Repository name with owner. */
    repository?: string;
    /** The branch, tag or SHA to checkout. */
    ref?: string;
    /** Personal access token used to fetch the repository. */
    token?: string;
    /** Number of commits to fetch. 0 indicates all history. */
    fetch_depth?: string;
    /** Whether to checkout submodules. */
    submodules?: string;
    }>,
  ): StepRef<{
    /** The branch, tag or SHA that was checked out. */
    ref: string;
    /** The commit SHA that was checked out. */
    commit: string;
  }>;
}
export {};
