tests/snapshots/cmd_add__cmd_add__add_multiple_actions-output.snap
---
source: tests/cmd_add.rs
expression: value
---
exit_code: 0
---stderr---
       Added actions/checkout v4.2.2 (11bd71901bbe)
       Added Swatinem/rust-cache v2.7.8 (9d47c6ad4b02)
