tests/snapshots/cmd_add__cmd_add__add_single_action-mappings.snap
---
source: tests/cmd_add.rs
expression: value
---
// This file is generated by ghat. DO NOT EDIT.
globalThis.__GHAT_ACTION_MAPPINGS = {
  "actions/checkout": {
    inputs: {
      "fetch_depth": "fetch-depth"
    },
  },
};
